source/develop/release-management/releases/3.4.3/testing.html.md
---
title: oVirt 3.4.3 Testing
authors: lveyde, sandrobonazzola, stirabos
wiki_title: Testing/oVirt 3.4.3 Testing
wiki_revision_count: 3
wiki_last_updated: 2014-07-10
---

# oVirt 3.4.3 Testing

## What to do as a participant

*   Look at [OVirt_3.4_Test_Day](/develop/release-management/releases/3.4/test-day/) for understanding what should be tested
*   Update the Participants section.
*   Run into any issues? Report it on IRC, user mailing list, or bugzilla.

## Participants

Test Days are open to anyone.

If you have your own setup, we will provide all the software packages and the required information.

If you're willing to participate, please add yourself to the table below:

| Name     | part tested                                     | Storage | Networking            | Distribution | Bugs        |
|----------|-------------------------------------------------|---------|-----------------------|--------------|-------------|
| stirabos | engine-setup, iso-uploader, engine (all-in-one) | local   | plain, just ovirtmgmt | Fedora 19    | nothing new |
| lveyde   | engine-setup, iso-uploader, engine              | nfs     | plain, just ovirtmgmt | Fedora 19    | nothing new |
